# yumon-pet

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  Trunk.toml  index.html
archive/: arena_extract.txt  clean_chats.txt  handcrafted.txt  handcrafted_pairs.txt  ov_chats.txt  you_chats.txt
src/: lib.rs  main.rs
src/brain/: bpe.rs  chart.rs  chats.rs  classic_attn.rs  decoder_model.rs  fixer.rs  keywords.rs  loader.rs  mdx.rs  mod.rs  model.rs  pdf.rs  samples.rs  sentiment.rs  tokenizer.rs  train.rs  wiki.rs  world_augment.rs
src/brain/flash_attn/: attention.rs  bridge_ops.rs  kernel.rs  mod.rs
src/vision/: cifar.rs  fer.rs  loader.rs  mod.rs  model.rs  train.rs
yumon_bpe/: tokenizer-5mil.json  tokenizer-archive-1.json  tokenizer-archive-3.json  tokenizer-archive-4.json  tokenizer-archive.json  tokenizer-grow1.json  tokenizer-mem-arena.json  tokenizer-memory-2.json  tokenizer-mix-2.json  tokenizer-mix-5.json  tokenizer-mix.json  tokenizer-ov.json  tokenizer-qov.json  tokenizer-stephen.json  tokenizer-survival.json  tokenizer.json
