[package]
name = "yumon-pet"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "train_bpe"
path = "src/bin/train_bpe.rs"

[dependencies]
pollster = "0.3"
bytemuck = { version = "1.19.0", features = ["derive"] }
futures = "0.3.30"
uuid = { version = "1.8.0", features = ["v4", "js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.11.0"
rand = "0.8.5"
directories = "5.0.1"
chrono = { version = "0.4.38", features = ["serde", "wasmbind"] }
anyhow = "1.0"
nalgebra = { version = "0.32.5", features = ["mint"] }
nalgebra-glm = "0.18.0"
noise = "0.8"
mint = "0.5.9"
burn = { version = "0.20", features = ["ndarray", "autodiff", "wgpu"] }
fastrand = "2"
bincode     = "1"
image       = "0.25"
quick-xml   = { version = "0.36", features = ["serialize"] }
clap        = { version = "4",   features = ["derive"] }
indicatif   = "0.17"     # progress bars during training
tokenizers = { version = "0.19", features = ["unstable_wasm"] }
quick-error = "2.0.1"
walkdir = "2"
csv = "1.4.0"
regex = "1"
ratatui = "0.29"
crossterm = "0.28"
# floem = "0.2.0"
# crossbeam-channel = "0.5.15"
pdf-extract = "0.10.0"