[package]
name = "yumon-pet"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "train_bpe"
path = "src/bin/train_bpe.rs"

[dependencies]
uuid = { version = "1.8.0", features = ["v4", "js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.11.0"
chrono = { version = "0.4.38", features = ["serde", "wasmbind"] }
anyhow = "1.0"
fancy-regex = "0.17.0"
textwrap = "0.16.2"
derive-new = "0.7"
unicode-width = "0.2"
cubecl = { version = "0.9", features = ["wgpu"] }
cubecl-common = { version = "0.9", features = ["serde"] }
burn = { version = "0.20", features = ["autodiff", "wgpu"] }
regex = "1"
rand = "0.8.5"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.29"
futures = "0.3.30"

[target.'cfg(target_os = "windows")'.dependencies]
three-d = { version = "0.17", features = ["egui-gui"] }
three-d-asset = { version = "0.7", features = ["gltf", "png"] }
crossterm = "0.28"
pollster = "0.3"
bytemuck = { version = "1.19.0", features = ["derive"] }
nalgebra = { version = "0.32.5", features = ["mint"] }
nalgebra-glm = "0.18.0"
bincode     = "1"
keyword_extraction = {version = "1.5", features = ["yake"]}
mint = "0.5.9"
pdf-extract = "0.10.0"
outlines-core = "0.2.14"
walkdir = "2"
csv = "1.4.0"
indicatif   = "0.17"     # progress bars during training
quick-xml   = { version = "0.36", features = ["serialize"] }
directories = "5.0.1"
ratatui = "^0.29"
tokenizers = { version = "0.19" }
noise = "0.8"
fastrand = {version = "2", features = ["js"]}
image       = "0.25"
clap        = { version = "4",   features = ["derive"] }
quick-error = "2.0.1"
# floem = "0.2.0"
# crossbeam-channel = "0.5.15"
rayon = "1.11.0"
stop-words = "0.8.0"
# json-repair = "0.4.0" # requires nightly?
# json-fix = "0.1.1" # bad logs
winit = "0.30.13"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Navigator", "Location"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-timer = "0.2.5"
js-sys = "0.3.83"
ratzilla = "^0.2"
tokenizers = { version = "0.19", default-features = false, features = ["fancy-regex", "unstable_wasm"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
